Forward the Receiver type to the connect call in QGrpcCallReply::subscribe

For member methods QObject::connect need to know the actual type of
the slot context. Forward the receiver type to a connect signal to
pass type trait check of the QObject::connect method.

Fixes: QTBUG-124217
Change-Id: I6d7d17f7f967c0a9a2538eca6261b68ca2f29605
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Dennis Oberst <dennis.oberst@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>